feat: map refined requirements to interfaces and DTOs